tests/snapshots/snapshots__budget_mdbook_root_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 130 → level 0 (124 words)

CHANGELOG.md
CODE_OF_CONDUCT.md
CONTRIBUTING.md
README.md
crates/mdbook-compare/README.md
crates/mdbook-compare/src/main.rs
crates/mdbook-core/README.md
crates/mdbook-core/src/book/tests.rs
crates/mdbook-core/src/book.rs
crates/mdbook-core/src/config.rs
crates/mdbook-core/src/lib.rs
crates/mdbook-core/src/utils/fs.rs
crates/mdbook-core/src/utils/html.rs
crates/mdbook-core/src/utils/mod.rs
crates/mdbook-core/src/utils/toml_ext.rs
crates/mdbook-driver/README.md
crates/mdbook-driver/src/builtin_preprocessors/cmd.rs
crates/mdbook-driver/src/builtin_preprocessors/index.rs
crates/mdbook-driver/src/builtin_preprocessors/links/take_lines.rs
crates/mdbook-driver/src/builtin_preprocessors/links.rs
crates/mdbook-driver/src/builtin_preprocessors/mod.rs
crates/mdbook-driver/src/builtin_renderers/markdown_renderer.rs
crates/mdbook-driver/src/builtin_renderers/mod.rs
crates/mdbook-driver/src/init.rs
crates/mdbook-driver/src/lib.rs
crates/mdbook-driver/src/load.rs
crates/mdbook-driver/src/mdbook/tests.rs
crates/mdbook-driver/src/mdbook.rs
crates/mdbook-html/README.md
crates/mdbook-html/front-end/js/book.js
crates/mdbook-html/front-end/js/clipboard.min.js
crates/mdbook-html/front-end/js/highlight.js
crates/mdbook-html/front-end/playground_editor/ace.js
crates/mdbook-html/front-end/playground_editor/editor.js
crates/mdbook-html/front-end/playground_editor/mode-rust.js
crates/mdbook-html/front-end/playground_editor/theme-dawn.js
crates/mdbook-html/front-end/playground_editor/theme-tomorrow_night.js
crates/mdbook-html/front-end/searcher/elasticlunr.min.js
crates/mdbook-html/front-end/searcher/mark.min.js
crates/mdbook-html/front-end/searcher/searcher.js
crates/mdbook-html/src/html/admonitions.rs
crates/mdbook-html/src/html/hide_lines.rs
crates/mdbook-html/src/html/mod.rs
crates/mdbook-html/src/html/print.rs
crates/mdbook-html/src/html/serialize.rs
crates/mdbook-html/src/html/tests.rs
crates/mdbook-html/src/html/tokenizer.rs
crates/mdbook-html/src/html/tree.rs
crates/mdbook-html/src/html_handlebars/hbs_renderer.rs
crates/mdbook-html/src/html_handlebars/helpers/fontawesome.rs
crates/mdbook-html/src/html_handlebars/helpers/mod.rs
crates/mdbook-html/src/html_handlebars/helpers/resources.rs
crates/mdbook-html/src/html_handlebars/helpers/toc.rs
crates/mdbook-html/src/html_handlebars/mod.rs
crates/mdbook-html/src/html_handlebars/search.rs
crates/mdbook-html/src/html_handlebars/static_files.rs
crates/mdbook-html/src/lib.rs
crates/mdbook-html/src/theme/fonts.rs
crates/mdbook-html/src/theme/mod.rs
crates/mdbook-html/src/theme/playground_editor.rs
crates/mdbook-html/src/theme/searcher.rs
crates/mdbook-html/src/utils.rs
crates/mdbook-markdown/README.md
crates/mdbook-markdown/src/lib.rs
crates/mdbook-preprocessor/README.md
crates/mdbook-preprocessor/src/lib.rs
crates/mdbook-renderer/README.md
crates/mdbook-renderer/src/lib.rs
crates/mdbook-summary/README.md
crates/mdbook-summary/src/lib.rs
crates/xtask/README.md
crates/xtask/src/changelog.rs
crates/xtask/src/main.rs
eslint.config.mjs
guide/guide-helper/src/lib.rs
guide/guide-helper/src/main.rs
guide/src/404.md
guide/src/README.md
guide/src/SUMMARY.md
guide/src/cli/README.md
guide/src/cli/arg-watcher.md
guide/src/cli/build.md
guide/src/cli/clean.md
guide/src/cli/completions.md
guide/src/cli/init.md
guide/src/cli/serve.md
guide/src/cli/test.md
guide/src/cli/watch.md
guide/src/continuous-integration.md
guide/src/for_developers/README.md
guide/src/for_developers/backends.md
guide/src/for_developers/mdbook-wordcount/src/main.rs
guide/src/for_developers/preprocessors.md
guide/src/format/README.md
guide/src/format/configuration/README.md
guide/src/format/configuration/environment-variables.md
guide/src/format/configuration/general.md
guide/src/format/configuration/preprocessors.md
guide/src/format/configuration/renderers.md
guide/src/format/example.rs
guide/src/format/markdown.md
guide/src/format/mathjax.md
guide/src/format/mdbook.md
guide/src/format/summary.md
guide/src/format/theme/README.md
guide/src/format/theme/editor.md
guide/src/format/theme/index-hbs.md
guide/src/format/theme/syntax-highlighting.md
guide/src/guide/README.md
guide/src/guide/creating.md
guide/src/guide/installation.md
guide/src/guide/reading.md
guide/src/misc/contributors.md
src/cmd/build.rs
src/cmd/clean.rs
src/cmd/command_prelude.rs
src/cmd/init.rs
src/cmd/mod.rs
src/cmd/serve.rs
src/cmd/test.rs
src/cmd/watch/native.rs
src/cmd/watch/poller.rs
src/cmd/watch.rs
src/main.rs
