tests/snapshots/snapshots__budget_mdbook_root_level1.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 1000 → level 1 (723 words)

CHANGELOG.md
     1→# Changelog
     3→## mdBook 0.5.2
     6→### Changed
    13→### Fixed
    24→## mdBook 0.5.1
    27→### Changed
    33→### Fixed
    39→## mdBook 0.5.0
    53→## 0.5 Migration Guide
    63→### Major additions
    74→### Config changes
   103→### Theme changes
   110→### Rendering changes
   134→### CLI changes
   141→### Rust API
   181→## mdBook 0.5.0-beta.2
   184→### Added
   193→### Changed
   204→### Fixed
   221→## mdBook 0.5.0-beta.1
   224→### Changed
   233→### Fixed
   244→## mdBook 0.5.0-alpha.1
   247→### Added
   266→### Changed
   320→### Removed
   343→### Fixed
   352→## mdBook 0.4.52
   357→### Added
   363→### Changed
   372→### Fixed
   381→## mdBook 0.4.51
   384→### Fixed
   388→## mdBook 0.4.50
   391→### Added
   396→### Changed
   409→### Fixed
   416→## mdBook 0.4.49
   419→### Added
   424→### Changed
   436→### Fixed
   447→## mdBook 0.4.48
   450→### Added
   457→### Changed
   466→## mdBook 0.4.47
   469→### Fixed
   474→## mdBook 0.4.46
   477→### Changed
   482→### Fixed
   487→## mdBook 0.4.45
   490→### Changed
   497→### Fixed
   502→## mdBook 0.4.44
   505→### Added
   514→### Fixed
   523→### Changed
   533→## mdBook 0.4.43
   536→### Fixed
   541→### Changed
   546→## mdBook 0.4.42
   549→### Fixed
   554→## mdBook 0.4.41
   559→### Added
   566→### Changed
   579→### Fixed
   588→## mdBook 0.4.40
   591→### Fixed
   596→## mdBook 0.4.39
   599→### Fixed
   604→## mdBook 0.4.38
   607→### Added
   612→### Changed
   626→### Fixed
   635→## mdBook 0.4.37
   638→### Changed
   655→### Fixed
   659→## mdBook 0.4.36
   662→### Added
   668→### Changed
   674→### Fixed
   682→## mdBook 0.4.35
   685→### Added
   693→### Changed
   697→## mdBook 0.4.34
   700→### Fixed
   704→## mdBook 0.4.33
   707→### Added
   711→### Fixed
   721→## mdBook 0.4.32
   724→### Fixed
   728→### Changed
   737→## mdBook 0.4.31
   740→### Fixed
   748→## mdBook 0.4.30
   751→### Added
   761→### Fixed
   765→## mdBook 0.4.29
   768→### Changed
   781→### Fixed
   785→## mdBook 0.4.28
   788→### Changed
   794→### Fixed
   798→## mdBook 0.4.27
   801→### Changed
   805→## mdBook 0.4.26
   810→### Changed
   822→### Fixed
   826→## mdBook 0.4.25
   829→### Fixed
   833→## mdBook 0.4.24
   836→### Fixed
   840→## mdBook 0.4.23
   843→### Changed
   851→### Fixed
   855→## mdBook 0.4.22
   858→### Added
   868→### Changed
   881→### Fixed
   886→## mdBook 0.4.21
   889→### Fixed
   893→## mdBook 0.4.20
   896→### Fixed
   901→## mdBook 0.4.19
   904→### Added
   908→### Changed
   922→### Fixed
   929→## mdBook 0.4.18
   932→### Fixed
   937→## mdBook 0.4.17
   940→### Fixed
   944→## mdBook 0.4.16
   947→### Added
   955→### Changed
   964→### Fixed
   972→## mdBook 0.4.15
   975→### Changed
   982→## mdBook 0.4.14
   985→### Added
   989→### Changed
   997→### Fixed
  1004→## mdBook 0.4.13
  1007→### Added
  1012→### Fixed
  1022→## mdBook 0.4.12
  1025→### Changed
  1029→## mdBook 0.4.11
  1032→### Added
  1041→### Changed
  1054→### Fixed
  1059→## mdBook 0.4.10
  1062→### Changed
  1071→## mdBook 0.4.9
  1074→### Changed
  1082→### Fixed
  1091→## mdBook 0.4.8
  1094→### Added
  1100→### Changed
  1104→### Fixed
  1109→## mdBook 0.4.7
  1112→### Changed
  1119→### Fixed
  1123→## mdBook 0.4.6
  1126→### Changed
  1148→### Fixed
  1158→## mdBook 0.4.5
  1161→### Fixed
  1167→## mdBook 0.4.4
  1170→### Added
  1178→### Fixed
  1182→## mdBook 0.4.3
  1185→### Added
  1190→### Changed
  1198→### Fixed
  1204→## mdBook 0.4.2
  1207→### Changed
  1215→### Fixed
  1224→## mdBook 0.4.1
  1227→### Changed
  1231→### Fixed
  1237→## mdBook 0.4.0
  1240→### Breaking Changes
  1271→### Added
  1293→### Changed
  1311→### Fixed
  1328→## mdBook 0.3.7
  1331→### Changed
  1341→### Fixed
  1347→## mdBook 0.3.6
  1350→### Added
  1355→### Changed
  1366→### Fixed
  1384→## mdBook 0.3.5
  1387→### Changed
  1391→### Fixed
  1397→## mdBook 0.3.4
  1400→### Changed
  1406→## mdBook 0.3.3
  1409→### Changed
  1415→### Fixed
  1420→## mdBook 0.3.2
  1423→### Added
  1452→### Changed
  1479→### Fixed
  1493→## mdBook 0.3.1
  1496→### Added
  1503→### Changed
  1507→### Fixed
  1515→## mdBook 0.3.0
  1518→### Added
  1529→### Changed
  1560→### Fixed
  1585→## mdBook 0.2.3 (2018-01-18)
  1588→### Added
  1596→### Changed
  1601→### Fixed
  1607→## mdBook 0.2.2 (2018-10-19)
  1610→### Added
  1639→### Fixed
  1646→## mdBook 0.2.1 (2018-08-22)
  1649→### Changed
  1653→### Fixed
  1657→## mdBook 0.2.0 (2018-08-02)
  1659→### Changed
  1697→### Fixed
CODE_OF_CONDUCT.md
     1→# The Rust Code of Conduct
CONTRIBUTING.md
     1→# Contributing
    10→## Issue assignment
    19→## Issues to work on
    44→## Building mdBook
    59→## Code quality
    63→### Formatting code with rustfmt
    87→### Finding issues with clippy
   101→## Change requirements
   126→## Tests
   153→## Making a pull-request
   160→## Browser compatibility and testing
   190→### Checking changes in `.js` files
   205→## Updating highlight.js
   218→## Publishing new releases
README.md
     1→# mdBook
    14→## License
crates/mdbook-compare/README.md
crates/mdbook-compare/src/main.rs
crates/mdbook-core/README.md
crates/mdbook-core/src/book/tests.rs
crates/mdbook-core/src/book.rs
crates/mdbook-core/src/config.rs
crates/mdbook-core/src/lib.rs
crates/mdbook-core/src/utils/fs.rs
crates/mdbook-core/src/utils/html.rs
crates/mdbook-core/src/utils/mod.rs
crates/mdbook-core/src/utils/toml_ext.rs
crates/mdbook-driver/README.md
crates/mdbook-driver/src/builtin_preprocessors/cmd.rs
crates/mdbook-driver/src/builtin_preprocessors/index.rs
crates/mdbook-driver/src/builtin_preprocessors/links/take_lines.rs
crates/mdbook-driver/src/builtin_preprocessors/links.rs
crates/mdbook-driver/src/builtin_preprocessors/mod.rs
crates/mdbook-driver/src/builtin_renderers/markdown_renderer.rs
crates/mdbook-driver/src/builtin_renderers/mod.rs
crates/mdbook-driver/src/init.rs
crates/mdbook-driver/src/lib.rs
crates/mdbook-driver/src/load.rs
crates/mdbook-driver/src/mdbook/tests.rs
crates/mdbook-driver/src/mdbook.rs
crates/mdbook-html/README.md
crates/mdbook-html/front-end/js/book.js
crates/mdbook-html/front-end/js/clipboard.min.js
crates/mdbook-html/front-end/js/highlight.js
crates/mdbook-html/front-end/playground_editor/ace.js
crates/mdbook-html/front-end/playground_editor/editor.js
crates/mdbook-html/front-end/playground_editor/mode-rust.js
crates/mdbook-html/front-end/playground_editor/theme-dawn.js
crates/mdbook-html/front-end/playground_editor/theme-tomorrow_night.js
crates/mdbook-html/front-end/searcher/elasticlunr.min.js
crates/mdbook-html/front-end/searcher/mark.min.js
crates/mdbook-html/front-end/searcher/searcher.js
crates/mdbook-html/src/html/admonitions.rs
crates/mdbook-html/src/html/hide_lines.rs
crates/mdbook-html/src/html/mod.rs
crates/mdbook-html/src/html/print.rs
crates/mdbook-html/src/html/serialize.rs
crates/mdbook-html/src/html/tests.rs
crates/mdbook-html/src/html/tokenizer.rs
crates/mdbook-html/src/html/tree.rs
crates/mdbook-html/src/html_handlebars/hbs_renderer.rs
crates/mdbook-html/src/html_handlebars/helpers/fontawesome.rs
crates/mdbook-html/src/html_handlebars/helpers/mod.rs
crates/mdbook-html/src/html_handlebars/helpers/resources.rs
crates/mdbook-html/src/html_handlebars/helpers/toc.rs
crates/mdbook-html/src/html_handlebars/mod.rs
crates/mdbook-html/src/html_handlebars/search.rs
crates/mdbook-html/src/html_handlebars/static_files.rs
crates/mdbook-html/src/lib.rs
crates/mdbook-html/src/theme/fonts.rs
crates/mdbook-html/src/theme/mod.rs
crates/mdbook-html/src/theme/playground_editor.rs
crates/mdbook-html/src/theme/searcher.rs
crates/mdbook-html/src/utils.rs
crates/mdbook-markdown/README.md
crates/mdbook-markdown/src/lib.rs
crates/mdbook-preprocessor/README.md
crates/mdbook-preprocessor/src/lib.rs
crates/mdbook-renderer/README.md
crates/mdbook-renderer/src/lib.rs
crates/mdbook-summary/README.md
crates/mdbook-summary/src/lib.rs
crates/xtask/README.md
crates/xtask/src/changelog.rs
crates/xtask/src/main.rs
eslint.config.mjs
     7→            preprocess
    16→            postprocess
guide/guide-helper/src/lib.rs
guide/guide-helper/src/main.rs
guide/src/404.md
guide/src/README.md
guide/src/SUMMARY.md
guide/src/cli/README.md
guide/src/cli/arg-watcher.md
guide/src/cli/build.md
guide/src/cli/clean.md
guide/src/cli/completions.md
guide/src/cli/init.md
guide/src/cli/serve.md
guide/src/cli/test.md
guide/src/cli/watch.md
guide/src/continuous-integration.md
guide/src/for_developers/README.md
guide/src/for_developers/backends.md
guide/src/for_developers/mdbook-wordcount/src/main.rs
guide/src/for_developers/preprocessors.md
guide/src/format/README.md
guide/src/format/configuration/README.md
guide/src/format/configuration/environment-variables.md
guide/src/format/configuration/general.md
guide/src/format/configuration/preprocessors.md
guide/src/format/configuration/renderers.md
guide/src/format/example.rs
guide/src/format/markdown.md
guide/src/format/mathjax.md
guide/src/format/mdbook.md
guide/src/format/summary.md
guide/src/format/theme/README.md
guide/src/format/theme/editor.md
guide/src/format/theme/index-hbs.md
guide/src/format/theme/syntax-highlighting.md
guide/src/guide/README.md
guide/src/guide/creating.md
guide/src/guide/installation.md
guide/src/guide/reading.md
guide/src/misc/contributors.md
src/cmd/build.rs
src/cmd/clean.rs
src/cmd/command_prelude.rs
src/cmd/init.rs
src/cmd/mod.rs
src/cmd/serve.rs
src/cmd/test.rs
src/cmd/watch/native.rs
src/cmd/watch/poller.rs
src/cmd/watch.rs
src/main.rs
