tests/snapshots/snapshots__budget_mitt_2000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 2000 (2002 tokens)

README.md
     9→# Mitt
    11→> Tiny 200b functional event emitter / pubsub.
    12→
    13→-   **Microscopic:** weighs less than 200 bytes gzipped
    14→-   **Useful:** a wildcard `"*"` event type listens to all events
    15→-   **Familiar:** same names & ideas as [Node's EventEmitter](https://nodejs.org/api/events.html#events_class_eventemitter)
    16→-   **Functional:** methods don't rely on `this`
    17→-   **Great Name:** somehow [mitt](https://npm.im/mitt) wasn't taken
    18→
    19→Mitt was made for the browser, but works in any JavaScript runtime. It has no dependencies and supports IE9+.
    20→
    21→## Table of Contents
    23→-   [Install](#install)
    24→-   [Usage](#usage)
    25→-   [Examples & Demos](#examples--demos)
    26→-   [API](#api)
    27→-   [Contribute](#contribute)
    28→-   [License](#license)
    29→
    30→## Install
    32→This project uses [node](http://nodejs.org) and [npm](https://npmjs.com). Go check them out if you don't have them locally installed.
    33→
    34→```sh
    35→$ npm install --save mitt
    36→```
    37→
    38→Then with a module bundler like [rollup](http://rollupjs.org/) or [webpack](https://webpack.js.org/), use as you would anything else:
    39→
    40→```javascript
    41→// using ES6 modules
    42→import mitt from 'mitt'
    43→
    44→// using CommonJS modules
    45→var mitt = require('mitt')
    46→```
    47→
      →…
    56→## Usage
    58→```js
    59→import mitt from 'mitt'
    60→
    61→const emitter = mitt()
    62→
    63→// listen to an event
    64→emitter.on('foo', e => console.log('foo', e) )
    65→
    66→// listen to all events
    67→emitter.on('*', (type, e) => console.log(type, e) )
    68→
    69→// fire an event
    70→emitter.emit('foo', { a: 'b' })
    71→
    72→// clearing all events
    73→emitter.all.clear()
      →…
    81→### Typescript
   113→## Examples & Demos
   123→## API
   127→#### Table of Contents
   138→### mitt
   144→### all
   148→### on
   152→#### Parameters
   157→### off
   162→#### Parameters
   167→### emit
   174→#### Parameters
   179→## Contribute
   181→First off, thanks for taking the time to contribute!
   182→Now, take a moment to be sure your contributions make sense to everyone else.
   183→
   184→### Reporting Issues
   189→### Submitting pull requests
   203→## License
   205→[MIT License](https://opensource.org/licenses/MIT) © [Jason Miller](https://jasonformat.com/)

package.json
     2→  "name": "mitt",
     3→  "version": "3.0.1",
     4→  "description": "Tiny 200b functional Event Emitter / pubsub.",
     5→  "module": "dist/mitt.mjs",
     6→  "main": "dist/mitt.js",
     7→  "jsnext:main": "dist/mitt.mjs",
     8→  "umd:main": "dist/mitt.umd.js",
     9→  "source": "src/index.ts",
    10→  "typings": "index.d.ts",
    11→  "exports": {
    17→  },
    18→  "scripts": {
    29→  },
    30→  "repository": "developit/mitt",
    31→  "keywords": [
    36→  ],
    37→  "homepage": "https://github.com/developit/mitt",
    38→  "authors": [
    40→  ],
    41→  "license": "MIT",
    42→  "files": [
    45→  ],
    46→  "mocha": {
    57→  },
    58→  "prettier": {
    61→  },
    62→  "devDependencies": {
    84→  }
    85→}

src/index.ts
     1→export type EventType = string | symbol;
     5→export type Handler<T = unknown> = (event: T) => void;
     6→export type WildcardHandler<T = Record<string, unknown>> = (
     7→	type: keyof T,
     8→	event: T[keyof T]
     9→) => void;
    12→export type EventHandlerList<T = unknown> = Array<Handler<T>>;
    13→export type WildCardEventHandlerList<T = Record<string, unknown>> = Array<
    14→	WildcardHandler<T>
    15→>;
    18→export type EventHandlerMap<Events extends Record<EventType, unknown>> = Map<
    19→	keyof Events | '*',
    20→	EventHandlerList<Events[keyof Events]> | WildCardEventHandlerList<Events>
    21→>;
    23→export interface Emitter<Events extends Record<EventType, unknown>> {
    24→	all: EventHandlerMap<Events>;
    25→
    26→	on<Key extends keyof Events>(type: Key, handler: Handler<Events[Key]>): void;
    27→	on(type: '*', handler: WildcardHandler<Events>): void;
    33→	off(type: '*', handler: WildcardHandler<Events>): void;
    36→	emit<Key extends keyof Events>(
    37→		type: undefined extends Events[Key] ? Key : never
    38→	): void;
    41→/**
    42→ * Mitt: Tiny (~200b) functional event emitter / pubsub.
    43→ * @name mitt
    44→ * @returns {Mitt}
    45→ */
    46→export default function mitt<Events extends Record<EventType, unknown>>(
    47→	all?: EventHandlerMap<Events>
    48→): Emitter<Events> {
    49→	type GenericEventHandler =
    50→		| Handler<Events[keyof Events]>
    51→		| WildcardHandler<Events>;
    52→	all = all || new Map();
    53→
    54→	return {
    55→		/**
    56→		 * A Map of event names to registered handler functions.
    57→		 */
    58→		all,
    59→
    60→		/**
    61→		 * Register an event handler for the given type.
    62→		 * @param {string|symbol} type Type of event to listen for, or `'*'` for all events
    63→		 * @param {Function} handler Function to call in response to given event
    64→		 * @memberOf mitt
    65→		 */
    66→		on<Key extends keyof Events>(type: Key, handler: GenericEventHandler) {
    67→			const handlers: Array<GenericEventHandler> | undefined = all!.get(type);
    68→			if (handlers) {
    69→				handlers.push(handler);
    70→			} else {
    71→				all!.set(type, [handler] as EventHandlerList<Events[keyof Events]>);
    72→			}
    73→		},
    74→
    75→		/**
      →		…

test/index_test.ts

test/test-types-compilation.ts
     5→interface SomeEventData {
     6→	name: string;
     7→}
     9→const emitter = mitt<{
    15→const barHandler …
    16→const fooHandler …
    17→const wildcardHandler …

tsconfig.json
     2→	"compileOnSave": false,
     3→	"compilerOptions": {
    10→	},
    11→	"include": [
    14→	]
    15→}
